<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.tennez.inventory.AddProductsActivity"
    android:layoutDirection="rtl"
    android:textDirection="rtl">


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/storageSectionSelection"
        android:layout_below="@+id/storageSectionTitle"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/storageSection"
        android:id="@+id/storageSectionTitle"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@+id/storageSectionSelection" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/storageSectionText"
        android:layout_below="@+id/storageSectionSelection"
        android:layout_alignEnd="@+id/storageSectionSelection"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/storeSection"
        android:id="@+id/storeSectionTitle"
        android:layout_below="@+id/storageSectionText"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/storeSectionSelection"
        android:layout_below="@+id/storeSectionTitle"
        android:layout_alignParentEnd="true"
        android:spinnerMode="dialog" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/storeSectionText"
        android:layout_below="@+id/storeSectionSelection"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/nameTitle"
        android:layout_below="@+id/storeSectionText"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameText"
        android:layout_below="@+id/nameTitle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/addBtn"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clearBtn"
        android:layout_alignTop="@+id/addBtn"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
