<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.tennez.inventory.ShoppingListActivity"
    android:layoutDirection="rtl"
    android:textDirection="rtl">

    <TextView android:text="@string/total" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/primary_text_light"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/storeSections"
        android:layout_marginTop="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textDirection="rtl"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endShopping"
        android:id="@+id/endBtn"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearShopping"
        android:id="@+id/clearBtn"
        android:layout_alignTop="@+id/endBtn"
        android:layout_alignEnd="@+id/storeSections" />

</RelativeLayout>
